--- a/ch08-01-vectors.html
+++ b/ch08-01-vectors.html
@@ -307,7 +307,7 @@ To learn more, run the command again with --verbose.
 
     let row = vec![
         SpreadsheetCell::Int(3),
-        SpreadsheetCell::Text(String::from(&quot;blue&quot;)),
+        SpreadsheetCell::Text(String::from(&quot;藍色&quot;)),
         SpreadsheetCell::Float(10.12),
     ];
 <span class="boring">}
