--- a/ch08-03-hash-maps.html
+++ b/ch08-03-hash-maps.html
@@ -168,7 +168,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#透過雜湊映射儲存鍵值配對" id="透過雜湊映射儲存鍵值配對">透過雜湊映射儲存鍵值配對</a></h2>
-<p>我們最後一個常見的集合是<em>雜湊映射（hash map）</em>，<code>HashMap&lt;K, V&gt;</code> 型別會儲存一個鍵（key）型別 <code>K</code> 對應到一個數值（value）型別 <code>V</code>。它透過*雜湊函式（hashing function）*來決定要將這些鍵與值放在記憶體何處。許多程式語言都有支援這種類型的資料結構，不過通常它們會提供不同的名稱，像是 hash、map、object、hash table、dictionary 或 associative array 等等。</p>
+<p>我們最後一個常見的集合是<em>雜湊映射（hash map）</em>，<code>HashMap&lt;K, V&gt;</code> 型別會儲存一個鍵（key）型別 <code>K</code> 對應到一個數值（value）型別 <code>V</code>。它透過<em>雜湊函式（hashing function）</em> 來決定要將這些鍵與值放在記憶體何處。許多程式語言都有支援這種類型的資料結構，不過通常它們會提供不同的名稱，像是 hash、map、object、hash table、dictionary 或 associative array 等等。</p>
 <p>雜湊映射適合用於當你不想像向量那樣用索引搜尋資料，而是透過一個可以爲任意型別的鍵來搜尋的情況。舉例來說，在比賽中我們可以使用雜湊映射來儲存每隊的分數，每個鍵代表對與名稱，而每個值代表隊伍分數。給予一個隊伍名稱，你就能取得該隊伍分數。</p>
 <p>我們會在此段落介紹雜湊映射的基本 API，但還有很多實用的函式定義在標準函式庫的 <code>HashMap&lt;K, V&gt;</code> 中，所以別忘了查閱標準函式庫的技術文件來瞭解更多資訊。</p>
 <h3><a class="header" href="#建立新的雜湊映射" id="建立新的雜湊映射">建立新的雜湊映射</a></h3>
@@ -178,18 +178,18 @@
 
     let mut scores = HashMap::new();
 
-    scores.insert(String::from(&quot;Blue&quot;), 10);
-    scores.insert(String::from(&quot;Yellow&quot;), 50);
+    scores.insert(String::from(&quot;藍隊&quot;), 10);
+    scores.insert(String::from(&quot;黃隊&quot;), 50);
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-20：建立新的雜湊映射並插入一些鍵值</span></p>
 <p>注意到我們需要先使用 <code>use</code> 將標準函式庫的 <code>HashMap</code> 集合引入。在我們介紹的三個常見集合中，此集合是最少被用到的，所以它並沒有包含在 prelude 內讓我們能自動引用。雜湊映射也沒有像前者那麼多標準函式庫提供的支援，像是內建建構它們的巨集。</p>
 <p>和向量一樣，雜湊映射會將它們的資料儲存在堆積上。此 <code>HashMap</code> 得鍵是 <code>String</code> 型別而值是 <code>i32</code> 型別。和向量一樣，雜湊函式宣告後就都得是同類的，所有的鍵都必須是同型別，且所有的值也都必須是同型別。</p>
-<p>另一種建構雜湊映射的方式爲使用疊代器並在一個元組組成的向量中使用 <code>collect</code> 方法，其中每個元組都包含一個鍵與值的配對。我們會在第十三章的<a href="ch13-02-iterators.html">「使用疊代器來處理一系列的項目」</a><!-- ignore -->段落中深入探討疊代器與它們相關的方法。<code>collect</code> 方法會將收集的資料轉換成其他集合型別，包含 <code>HashMap</code>。舉例來說，如果我們有兩個向量分別是隊伍名稱與隊伍分數的話，我們可以使用 <code>zip</code> 方法來產生由元組組成的向量，其中「Blue」會與 10 配對，以此類推。然後我們就能用 <code>collect</code> 方法將元組向量轉換成雜湊映射，如範例 8-21 所示。</p>
+<p>另一種建構雜湊映射的方式爲使用疊代器並在一個元組組成的向量中使用 <code>collect</code> 方法，其中每個元組都包含一個鍵與值的配對。我們會在第十三章的<a href="ch13-02-iterators.html">「使用疊代器來處理一系列的項目」</a><!-- ignore -->段落中深入探討疊代器與它們相關的方法。<code>collect</code> 方法會將收集的資料轉換成其他集合型別，包含 <code>HashMap</code>。舉例來說，如果我們有兩個向量分別是隊伍名稱與隊伍分數的話，我們可以使用 <code>zip</code> 方法來產生由元組組成的向量，其中「藍隊」會與 10 配對，以此類推。然後我們就能用 <code>collect</code> 方法將元組向量轉換成雜湊映射，如範例 8-21 所示。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    use std::collections::HashMap;
 
-    let teams = vec![String::from(&quot;Blue&quot;), String::from(&quot;Yellow&quot;)];
+    let teams = vec![String::from(&quot;藍隊&quot;), String::from(&quot;黃隊&quot;)];
     let initial_scores = vec![10, 50];
 
     let mut scores: HashMap&lt;_, _&gt; =
@@ -205,7 +205,7 @@
 </span>    use std::collections::HashMap;
 
     let field_name = String::from(&quot;Favorite color&quot;);
-    let field_value = String::from(&quot;Blue&quot;);
+    let field_value = String::from(&quot;藍隊&quot;);
 
     let mut map = HashMap::new();
     map.insert(field_name, field_value);
@@ -223,10 +223,10 @@
 
     let mut scores = HashMap::new();
 
-    scores.insert(String::from(&quot;Blue&quot;), 10);
-    scores.insert(String::from(&quot;Yellow&quot;), 50);
+    scores.insert(String::from(&quot;藍隊&quot;), 10);
+    scores.insert(String::from(&quot;黃隊&quot;), 50);
 
-    let team_name = String::from(&quot;Blue&quot;);
+    let team_name = String::from(&quot;藍隊&quot;);
     let score = scores.get(&amp;team_name);
 <span class="boring">}
 </span></code></pre></pre>
@@ -238,8 +238,8 @@
 
     let mut scores = HashMap::new();
 
-    scores.insert(String::from(&quot;Blue&quot;), 10);
-    scores.insert(String::from(&quot;Yellow&quot;), 50);
+    scores.insert(String::from(&quot;藍隊&quot;), 10);
+    scores.insert(String::from(&quot;黃隊&quot;), 50);
 
     for (key, value) in &amp;scores {
         println!(&quot;{}: {}&quot;, key, value);
@@ -247,8 +247,8 @@
 <span class="boring">}
 </span></code></pre></pre>
 <p>此程式會以任意順序印出每個配對：</p>
-<pre><code class="language-text">Yellow: 50
-Blue: 10
+<pre><code class="language-text">黃隊: 50
+藍隊: 10
 </code></pre>
 <h3><a class="header" href="#更新雜湊映射" id="更新雜湊映射">更新雜湊映射</a></h3>
 <p>雖然鍵值配對的數量可以增加，但每個鍵同一時間就只能有一個對應的值而已。當你想要改變雜湊映射的資料的話，你必須決定如何處理當一個鍵已經有一個值的情況。你可以不管舊的值，直接用新值取代。你也可以保留舊值、忽略新值，只有在該鍵<em>尚未</em>擁有對應數值時才賦值給它。或者你也可以將舊值與新值組合起來。讓我們看看分別怎麼處理吧！</p>
@@ -259,31 +259,31 @@ Blue: 10
 
     let mut scores = HashMap::new();
 
-    scores.insert(String::from(&quot;Blue&quot;), 10);
-    scores.insert(String::from(&quot;Blue&quot;), 25);
+    scores.insert(String::from(&quot;藍隊&quot;), 10);
+    scores.insert(String::from(&quot;藍隊&quot;), 25);
 
     println!(&quot;{:?}&quot;, scores);
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-24：替換某個特定鍵對應的數值</span></p>
-<p>此程式碼會印出 <code>{&quot;Blue&quot;: 25}</code>，原本的數值 <code>10</code> 會被覆蓋。</p>
+<p>此程式碼會印出 <code>{&quot;藍隊&quot;: 25}</code>，原本的數值 <code>10</code> 會被覆蓋。</p>
 <h4><a class="header" href="#只在鍵沒有值的情況下插入數值" id="只在鍵沒有值的情況下插入數值">只在鍵沒有值的情況下插入數值</a></h4>
 <p>通常檢查某個特定的鍵有沒有數值，如果沒有的話才插入數值是很常見的。雜湊映射提供了一個特別的 API 叫做 <code>entry</code> 讓你可以用想要檢查的鍵作爲參數。<code>entry</code> 方法的回傳值是一個枚舉叫做 <code>Entry</code>，它代表了一個可能存在或不存在的數值。假設我們想要檢查黃隊的鍵有沒有對應的數值。如果沒有的話，我們想插入 50。而對藍隊也一樣。使用 <code>entry</code> API 的話，程式碼會長得像範例 8-25。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    use std::collections::HashMap;
 
     let mut scores = HashMap::new();
-    scores.insert(String::from(&quot;Blue&quot;), 10);
+    scores.insert(String::from(&quot;藍隊&quot;), 10);
 
-    scores.entry(String::from(&quot;Yellow&quot;)).or_insert(50);
-    scores.entry(String::from(&quot;Blue&quot;)).or_insert(50);
+    scores.entry(String::from(&quot;黃隊&quot;)).or_insert(50);
+    scores.entry(String::from(&quot;藍隊&quot;)).or_insert(50);
 
     println!(&quot;{:?}&quot;, scores);
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 8-25：使用 <code>entry</code> 方法在只有該鍵尚無任何數值時插入數值</span></p>
-<p><code>Entry</code> 中的 <code>or_insert</code> 方法定義了如果 <code>Entry</code> 的鍵有對應的數值的話，就回傳該值得可變引用；如果沒有的話，那就插入參數作爲新數值，並回傳此值的可變引用。這樣的技巧比我們親自寫邏輯還來的清楚，而且更有利於借用檢查器的檢查。</p>
-<p>執行範例 8-25 的程式碼會印出 <code>{&quot;Yellow&quot;: 50, &quot;Blue&quot;: 10}</code>。第一次 <code>entry</code> 的呼叫會對黃隊插入數值 50，因爲黃隊尚未有任何數值。第二次 <code>entry</code> 的呼叫則不會改變雜湊映射，因爲藍隊已經有數值 10。</p>
+<p><code>Entry</code> 中的 <code>or_insert</code> 方法定義了如果 <code>Entry</code> 的鍵有對應的數值的話，就回傳該值的可變引用；如果沒有的話，那就插入參數作爲新數值，並回傳此值的可變引用。這樣的技巧比我們親自寫邏輯還來的清楚，而且更有利於借用檢查器的檢查。</p>
+<p>執行範例 8-25 的程式碼會印出 <code>{&quot;黃隊&quot;: 50, &quot;藍隊&quot;: 10}</code>。第一次 <code>entry</code> 的呼叫會對黃隊插入數值 50，因爲黃隊尚未有任何數值。第二次 <code>entry</code> 的呼叫則不會改變雜湊映射，因爲藍隊已經有數值 10。</p>
 <h4><a class="header" href="#依據舊值更新數值" id="依據舊值更新數值">依據舊值更新數值</a></h4>
 <p>雜湊映射還有另一種常見的用法是，依照鍵的舊數值來更新它。舉例來說，範例 8-26 展示了一支如何計算一些文字內每個單字各出現多少次的程式碼。我們使用雜湊映射，鍵爲單字然後值爲我們每次追蹤計算對應單字出現多少次的次數。如果我們是第一次看到該單字的話，我們插入數值 0。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
@@ -304,7 +304,7 @@ Blue: 10
 <p><span class="caption">範例 8-26：使用雜湊映射儲存單字與次數來計算每個字出現的次數</span></p>
 <p>此程式碼會印出 <code>{&quot;world&quot;: 2, &quot;hello&quot;: 1, &quot;wonderful&quot;: 1}</code>。<code>or_insert</code> 方法會回傳該鍵對應數值的可變引用（<code>&amp;mut V</code>）。在此我們將可變引用儲存在 <code>count</code> 變數中，所以要賦值的話，我們必須先使用 <code>*</code> 來解引用（dereference）<code>count</code>。可變引用會在 <code>for</code> 結束時離開作用域，所以所有的改變都是安全的且符合借用規則。</p>
 <h3><a class="header" href="#雜湊函式" id="雜湊函式">雜湊函式</a></h3>
-<p><code>HashMap</code> 預設是使用一種「密碼學安全（cryptographically strong）」<sup class="footnote-reference"><a href="#siphash">1</a></sup>的雜湊函式（hashing function），這可以抵禦阻斷服務（Denial of Service, DoS）的攻擊。這並不是最快的雜湊演算法，但爲了提升安全性唲犧牲一點效能是值得的。如果你做評測時覺得預設的雜湊函式太慢無法滿足你的需求的話，你可以指定不同的 <em>hasher</em> 來切換成其他雜湊函式。Hasher 是一個有實作 <code>BuildHasher</code> 特徵的型別。我們會在第十章討論到特徵以及如何實作它們。你不必從頭自己實作一個 hasher，<a href="https://crates.io/">crates.io</a> 上有其他 Rust 使用者分享的函式庫，其中就有不少提供許多常見雜湊演算法的 hasher 實作。</p>
+<p><code>HashMap</code> 預設是使用一種「密碼學安全（cryptographically strong）」<sup class="footnote-reference"><a href="#siphash">1</a></sup>的雜湊函式（hashing function），這可以抵禦阻斷服務（Denial of Service, DoS）的攻擊。這並不是最快的雜湊演算法，但爲了提升安全性而犧牲一點效能是值得的。如果你做評測時覺得預設的雜湊函式太慢無法滿足你的需求的話，你可以指定不同的 <em>hasher</em> 來切換成其他雜湊函式。Hasher 是一個有實作 <code>BuildHasher</code> 特徵的型別。我們會在第十章討論到特徵以及如何實作它們。你不必從頭自己實作一個 hasher，<a href="https://crates.io/">crates.io</a> 上有其他 Rust 使用者分享的函式庫，其中就有不少提供許多常見雜湊演算法的 hasher 實作。</p>
 <div class="footnote-definition" id="siphash"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://www.131002.net/siphash/siphash.pdf">https://www.131002.net/siphash/siphash.pdf</a></p>
 </div>
@@ -313,7 +313,7 @@ Blue: 10
 <ul>
 <li>給予一個整數列表，請使用向量並回傳算數平均數、中位數（排序列表後正中間的值）以及眾數（出現最多次的值，雜湊映射在此應該會很有用）。</li>
 <li>將字串轉換成 pig latin。每個單字的第一個字母爲子音的話，就將該字母移到單字後方，並加上「ay」，所以「first」會變成「irst-fay」。而單字第一個字母爲母音的話，就在單字後方加上「hay」，所以「apple」會變成「apple-hay」。請注意要考慮到 UTF-8 編碼！</li>
-<li>使用雜湊映射與向量來建立文字介面，讓使用者能新增員工名字到公司內的一個部門。舉來來說「Add Sally to Engineering」或「Add Amir to Sales」。然後讓使用者可以索取一個部門所有的員工列表，或是依據部門用字點順序排序，取得公司內所有的員工。</li>
+<li>使用雜湊映射與向量來建立文字介面，讓使用者能新增員工名字到公司內的一個部門。舉來來說「將莎莉加入工程部門」或「將阿米爾加入業務部門」。然後讓使用者可以索取一個部門所有的員工列表，或是依據部門用字點順序排序，取得公司內所有的員工。</li>
 </ul>
 <p>標準函式庫的 API 技術文件有詳細介紹向量、字串與雜湊映射的所有方法，這對於這些練習題應該會很有幫助！</p>
 <p>我們現在已經開始遇到有可能會運作失敗的複雜程式了，所以接下來正是來討論錯誤處理的時候！</p>
